infra/star/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: star-deployment
  labels:
    app: star
spec:
  selector:
    matchLabels:
      app: star
  template:
    metadata:
      labels:
        app: star
    spec:
      containers:
        - name: star
          image: ghcr.io/kofoednielsen/pass-star:170 # {"$imagepolicy": "pass:star"}
