infra/star/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: star-ingress
spec:
  rules:
  - http:
      paths:
      - path: /star
        pathType: Prefix
        backend:
          service:
            name: star-service
            port:
              number: 80
